--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
-
 <resources>
-    <string name="app_name">Final Project</string>
+    <string name="app_name">Overwatch Battles</string>
     <string name="usersHero">YOUR HERO</string>
     <string name="move1">button</string>
     <string name="move2">button</string>
@@ -23,6 +22,7 @@
     <string name="register">Register</string>
     <string name="forgot_password">Forgot Password</string>
     <string name="reset">Reset</string>
+
     <string-array name="trophies">
         <item>Select Trophy</item>
         <item>Thumbs-up</item>
